summary stats table using .agg method

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -820,13 +820,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>50.449276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median</th>\n",
+       "      <td>48.951421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>var</th>\n",
+       "      <td>79.291277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.904565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sem</th>\n",
+       "      <td>0.204933</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Tumor Volume (mm3)\n",
+       "mean             50.449276\n",
+       "median           48.951421\n",
+       "var              79.291277\n",
+       "std               8.904565\n",
+       "sem               0.204933"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "\n",
-    "# Using the aggregation method, produce the same summary statistics in a single line\n"
+    "# Using the aggregation method, produce the same summary statistics in a single line\n",
+    "\n",
+    "agg_summary_stats_df = clean_combined_study_data.agg({'Tumor Volume (mm3)': ['mean', 'median', 'var', 'std', 'sem']\n",
+    "                                                     #'Ceftamin': ['mean', 'median', 'var', 'std', 'sem'],\n",
+    "                                                     #'Infubinol': ['mean', 'median', 'var', 'std', 'sem'],\n",
+    "                                                     #'Ketapril': ['mean', 'median', 'var', 'std', 'sem'],\n",
+    "                                                     #'Naftisol': ['mean', 'median', 'var', 'std', 'sem'],\n",
+    "                                                     #'Placebo': ['mean', 'median', 'var', 'std', 'sem'],\n",
+    "                                                     #'Propriva':['mean', 'median', 'var', 'std', 'sem'],\n",
+    "                                                     #'Ramicane': ['mean', 'median', 'var', 'std', 'sem'],\n",
+    "                                                     #'Stelasyn': ['mean', 'median', 'var', 'std', 'sem'], 'Zoniferol': ['mean', 'median', 'var', 'std', 'sem']\n",
+    "                                                     })\n",
+    "\n",
+    "agg_summary_stats_df"
    ]
   },
   {
