lower, upper, and iqr calculated

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Mouse ID</th>\n",
-       "      <th>Drug Regimen_x</th>\n",
+       "      <th>Drug Regimen</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age_months</th>\n",
        "      <th>Weight (g)</th>\n",
@@ -1601,7 +1601,7 @@
        "      <th>Metastatic Sites</th>\n",
        "      <th>Final Timepoint</th>\n",
        "      <th>Final Tumor Volume (mm3)</th>\n",
-       "      <th>Drug Regimen_y</th>\n",
+       "      <th>Drug</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1680,12 +1680,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Mouse ID Drug Regimen_x   Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "0     k403       Ramicane  Male          21          16          0   \n",
-       "1     k403       Ramicane  Male          21          16          5   \n",
-       "2     k403       Ramicane  Male          21          16         10   \n",
-       "3     k403       Ramicane  Male          21          16         15   \n",
-       "4     k403       Ramicane  Male          21          16         20   \n",
+       "  Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "0     k403     Ramicane  Male          21          16          0   \n",
+       "1     k403     Ramicane  Male          21          16          5   \n",
+       "2     k403     Ramicane  Male          21          16         10   \n",
+       "3     k403     Ramicane  Male          21          16         15   \n",
+       "4     k403     Ramicane  Male          21          16         20   \n",
        "\n",
        "   Tumor Volume (mm3)  Metastatic Sites  Final Timepoint  \\\n",
        "0           45.000000                 0               45   \n",
@@ -1694,15 +1694,15 @@
        "3           34.223992                 1               45   \n",
        "4           32.997729                 1               45   \n",
        "\n",
-       "   Final Tumor Volume (mm3) Drug Regimen_y  \n",
-       "0                      45.0       Ramicane  \n",
-       "1                      45.0       Ramicane  \n",
-       "2                      45.0       Ramicane  \n",
-       "3                      45.0       Ramicane  \n",
-       "4                      45.0       Ramicane  "
+       "   Final Tumor Volume (mm3)      Drug  \n",
+       "0                      45.0  Ramicane  \n",
+       "1                      45.0  Ramicane  \n",
+       "2                      45.0  Ramicane  \n",
+       "3                      45.0  Ramicane  \n",
+       "4                      45.0  Ramicane  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1721,8 @@
     "        \n",
     "final_tumor_vol_df = id_max[['Timepoint', 'Tumor Volume (mm3)', 'Drug Regimen']]\n",
     "\n",
-    "final_tumor_vol_df = final_tumor_vol_df.rename(columns={'Timepoint': 'Final Timepoint', 'Tumor Volume (mm3)': 'Final Tumor Volume (mm3)'})\n",
+    "final_tumor_vol_df = final_tumor_vol_df.rename(columns={'Timepoint': 'Final Timepoint', 'Tumor Volume (mm3)': 'Final Tumor Volume (mm3)',\n",
+    "                                                       'Drug Regimen': 'Drug'})\n",
     "        \n",
     "final_tumor_vol_df.head()\n",
     "\n",
@@ -1740,12 +1741,20 @@
    "source": [
     "# Put treatments into a list for for loop (and later for plot labels)\n",
     "\n",
+    "treatments = ['Capomulin', 'Ramicane', 'Ketapril', 'Naftisol', 'Zoniferol', 'Stelasyn',\n",
+    "               'Placebo', 'Ceftamin', 'Infubinol', 'Propriva']\n",
     "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
-    "\n",
+    "tumor_vol = []\n",
     "\n",
     "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "size = merged_data['Final Tumor Volume (mm3)']\n",
     "\n",
+    "quartiles = size.quantile([.25, .5, .75])\n",
+    "lowerq = quartiles[.25]\n",
+    "upperq = quartiles[.75]\n",
+    "\n",
+    "iqr = upperq-lowerq\n",
     "    \n",
     "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
     "    \n",
